# SBI-benchmarks-data

./: README.md  make_dataset.py  make_datasets.ipynb  make_datasets_V2.ipynb  make_datasets_V3.ipynb  metadata.json  pyproject.toml
sbi_benchmarks/: __init__.py  hf_hub.py  sbi_tasks.py
